--- a/problems-review/188~200.ipynb
+++ b/problems-review/188~200.ipynb
@@ -244,6 +244,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#196(2)\n",
+    "\n",
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(143)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 20 \n",
+    "i = 2\n",
+    "\n",
+    "while i * i < n:\n",
+    "    while n%i == 0:\n",
+    "        n = n / i\n",
+    "    i = i + 1\n",
+    "\n",
+    "print (n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 1 µs, total: 3 µs\n",
+      "Wall time: 5.25 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 839, 1471, 6857]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#196(4)\n",
+    "%time\n",
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(600851475143)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
+      "Wall time: 4.77 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 839, 1471, 6857]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time\n",
+    "from sympy import primefactors\n",
+    "primefactors(600851475143)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [],
@@ -318,73 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "possible\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 20 % 3:\n",
+    "    print(\"possible\")"
+   ]
   },
   {
    "cell_type": "code",
