--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -27,12 +27,12 @@
    "source": [
     "def fun(n):\n",
     "    fun_sum = 0\n",
-    "    for i in range(1, n):\n",
-    "        fun_sum += i % 5\n",
+    "    \n",
+    "    for i in range(1,n):\n",
+    "        fun_sum += i % 5 \n",
+    "    \n",
     "    return fun_sum\n",
-    "\n",
-    "n = int(input(\"insert number\"))\n",
-    "print(fun(n))"
+    "fun(8)"
    ]
   },
   {
@@ -71,7 +71,20 @@
     "        if i % n ==0 and i % m == 0:\n",
     "            break\n",
     "        i += 1\n",
-    "    return i"
+    "    return i\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#211(2)\n",
+    "\n",
+    "def lcm(n, m):\n",
+    "    \"\"\"Compute the lowest common multiple of n and m\"\"\"\n",
+    "    return n * m / gcd(n, m)"
    ]
   },
   {
@@ -169,7 +182,19 @@
     "#216 정수 n을 입력 받았을 때, 1부터 n까지의 정수에 나오는 1의 총 개수를 구하는 프로그램을 구하시오.\n",
     "\n",
     "#ex) n = 4 일 때, 결과는 1 (1, 2, 3, 4중 1은 1개)\n",
-    "#ex) n = 13일 때, 결과는 6(1~13중 1은 6개)"
+    "#ex) n = 13일 때, 결과는 6(1~13중 1은 5개)\n",
+    "#ex) n = 25일 때, 결과는 12\n",
+    "\n",
+    "def num_1(n):\n",
+    "    case = 0\n",
+    "    for i in range(n+1):\n",
+    "        num = i\n",
+    "        while num != 0:\n",
+    "            if num % 10 == 1:\n",
+    "                case += 1\n",
+    "            num //= 10\n",
+    "    return case    \n",
+    "num_1(13)"
    ]
   },
   {
@@ -200,7 +225,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def d(n):\n",
+    "    a = 0\n",
+    "    for i in range(len(str(n))):\n",
+    "        a += int(str(n)[i])\n",
+    "    return a + n\n",
+    "d(111)\n",
+    "\n",
+    "\n",
+    "def isSelfnum(n):\n",
+    "    boolean = True\n",
+    "    for i in range(1, n+1):\n",
+    "        if n == d(i):\n",
+    "            boolean = False\n",
+    "    return boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time\n",
+    "[i for i in range(1, 1000) if isSelfnum(i)]"
+   ]
   },
   {
    "cell_type": "code",
@@ -222,8 +272,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asdf"
+    "#답이 아님. 1/12는 안됨, 0.0 으로 시작하면 안됨\n",
+    "\n",
+    "def fun_recurring(N):\n",
+    "    nstr = str(1/N)[2:]\n",
+    "    if len(nstr) <= 10:\n",
+    "        print(\"Not a recurring\")\n",
+    "    else:\n",
+    "        rec = \"\"\n",
+    "        for i in nstr:\n",
+    "            rec += i\n",
+    "            if rec == nstr[len(rec): 2*len(rec)]:\n",
+    "                return rec"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#이럼 앞의 0이안나오는데 흠..\n",
+    "def fun_recurring(N):\n",
+    "    nstr = str(1/N*10000000000)\n",
+    "    if len(nstr) <= 10:\n",
+    "        print(\"Not a recurring\")\n",
+    "    else:\n",
+    "        rec = \"\"\n",
+    "        for i in nstr:\n",
+    "            rec += i\n",
+    "            if rec == nstr[len(rec): 2*len(rec)]:\n",
+    "                return rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec:  1\n",
+      "nstr: 4\n",
+      "rec:  14\n",
+      "nstr: 28\n",
+      "rec:  142\n",
+      "nstr: 857\n",
+      "rec:  1428\n",
+      "nstr: 5714\n",
+      "rec:  14285\n",
+      "nstr: 71428\n",
+      "rec:  142857\n",
+      "nstr: 142857\n",
+      "hello~~~~~~~~~\n",
+      "rec:  1428571\n",
+      "nstr: 4285714\n",
+      "rec:  14285714\n",
+      "nstr: 28571428\n",
+      "rec:  142857142\n",
+      "nstr: 85714285\n",
+      "rec:  1428571428\n",
+      "nstr: 5714285\n",
+      "rec:  14285714285\n",
+      "nstr: 714285\n",
+      "rec:  142857142857\n",
+      "nstr: 14285\n",
+      "rec:  1428571428571\n",
+      "nstr: 4285\n",
+      "rec:  14285714285714\n",
+      "nstr: 285\n",
+      "rec:  142857142857142\n",
+      "nstr: 85\n",
+      "rec:  1428571428571428\n",
+      "nstr: 5\n",
+      "rec:  14285714285714285\n",
+      "nstr: \n"
+     ]
+    }
+   ],
+   "source": [
+    "nstr = str(1/7)[2:]\n",
+    "rec = \"\"\n",
+    "for i in nstr:\n",
+    "    rec += i\n",
+    "    print(\"rec: \",rec)\n",
+    "    print(\"nstr:\",nstr[len(rec):2*len(rec)])\n",
+    "    if rec == nstr[len(rec): 2*len(rec)]:\n",
+    "        print(\"hello~~~~~~~~~\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
