--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -22095,25 +22095,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number : 143\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n"
+      "Enter the number : 21\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n"
      ]
     }
    ],
@@ -22134,7 +22128,7 @@
     "                isTrue2 = True\n",
     "                for k in range(2,j):\n",
     "                    if j % k == 0:\n",
-    "                        isTrue = False\n",
+    "                        isTrue2 = False\n",
     "                if isTrue2 == True:\n",
     "                    if num == i * j:\n",
     "                        print(num, \"=\", max(i,j),\"X\", min(i,j))\n",
@@ -22146,9 +22140,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 391,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 143\n",
+    "i = 2\n",
+    "while i * i < n:\n",
+    "     while n % i == 0:\n",
+    "         n = n / i\n",
+    "     i = i + 1\n",
+    "\n",
+    "print (n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 13]"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(143)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -22211,19 +22273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-385-c58f7145eacf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m                         \u001b[0mnum_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mnum_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mnum_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m49\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "'31254'"
+      ]
+     },
+     "execution_count": 387,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -22239,11 +22300,212 @@
     "            for l in num:\n",
     "                for m in num:\n",
     "                    nstr = str(i) + str(j) + str(k) + str(l) + str(m)\n",
-    "                    if len({nstr}) == 5:\n",
+    "                    if len({i,j,k,l,m}) == 5:\n",
     "                        num_list.append(nstr)\n",
-    "num_list.sort()                        \n",
+    "\n",
+    "                        \n",
+    "                 \n",
     "num_list[49]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 404,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 4 % 3:\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 406,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "21 // 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.01 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 839, 1471, 6857]"
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#196(2)\n",
+    "%time\n",
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(600851475143)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4 µs, sys: 2 µs, total: 6 µs\n",
+      "Wall time: 9.06 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 7, 11]"
+      ]
+     },
+     "execution_count": 419,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#196(2)\n",
+    "%time\n",
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(231)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 7, 11]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "\n",
+    "prime_factors(231)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
