--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -30,7 +30,7 @@
     "    \n",
     "    for i in range(1,n):\n",
     "        fun_sum += i % 5 \n",
-    "    \n",
+    "        \n",
     "    return fun_sum\n",
     "fun(8)"
    ]
@@ -84,6 +84,7 @@
     "\n",
     "def lcm(n, m):\n",
     "    \"\"\"Compute the lowest common multiple of n and m\"\"\"\n",
+    "    \"\"\"multiply n and m then divide by greatest common divisor\"\"\"\n",
     "    return n * m / gcd(n, m)"
    ]
   },
