--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -153,6 +153,213 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5],\n",
+       " [2, 3, 4, 5, 6],\n",
+       " [3, 4, 5, 6, 7],\n",
+       " [4, 5, 6, 7, 8],\n",
+       " [5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 227 이런식으로 나타내시오\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [[0] * 5 for i in range(5)]\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        array[i][j] = 1+i+j\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[15, 16, 8, 20, 16],\n",
+       " [23, 1, 6, 4, 17],\n",
+       " [17, 11, 12, 19, 3],\n",
+       " [23, 19, 5, 11, 16],\n",
+       " [15, 20, 9, 18, 8]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#228 다음과 같이 5행 5열의 2차원 배열에 랜덤으로 1~25 사이의 수를 저장후, 2차원 배열의 수들의 평균이 12.5일경우 BIG 아니면 Small을 프린트하도록 하시오\n",
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.4, 8.0, 18.2, 8.0, 12.8] Small\n"
+     ]
+    }
+   ],
+   "source": [
+    "#228\n",
+    "import random\n",
+    "array = [[random.randrange(0,25) for i in range(5)] for i in range(5)]\n",
+    "average = []26\n",
+    "for i in range(5):\n",
+    "    average.append(sum(array[i])/5)\n",
+    "\n",
+    "\n",
+    "if sum(average)/5 >= 12.5:\n",
+    "    print(average,\"Big\")\n",
+    "else:\n",
+    "    print(average,\"Small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20  4  5 24 22 \n",
+      " 6 13 25 15 11 \n",
+      "23 24 25  7 10 \n",
+      " 8 14 13 22  3 \n",
+      "16 19  6  4 12 \n",
+      "Big\n"
+     ]
+    }
+   ],
+   "source": [
+    "#228(2)\n",
+    "import random\n",
+    "\n",
+    "array = [[0] * 5 for i in range(5)]\n",
+    "\n",
+    "for i in range(0, 25):\n",
+    "    array[i // 5][i % 5] = random.randrange(1,26)\n",
+    "    \n",
+    "sum = 0\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        print(\"%2d\" %array[i][j], end= \" \")\n",
+    "        sum += array[i][j]\n",
+    "    print()\n",
+    "\n",
+    "if sum/25 >= 12.5:\n",
+    "    print(\"Big\")\n",
+    "else:\n",
+    "    print(\"Small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#229 문자열을 입력받아 대문자와 소문자의 수를 구분하는 프로그램\n",
+    "\n",
+    "#ex) Enter the sentence: This is What I want to say\n",
+    "#upper: 3, lower: 17\n",
+    "\n",
+    "\n",
+    "sentence = input(\"Enter the sentence: \")\n",
+    "a = 0\n",
+    "b = 0\n",
+    "for i in range(len(sentence)):\n",
+    "    if \"A\" <= sentence[i] <= \"Z\":\n",
+    "        a += 1\n",
+    "    elif \"a\" <= sentence[i] <= \"z\":\n",
+    "        b += 1\n",
+    "        \n",
+    "print(\"sentence:\",sentence,\n",
+    "      \"lower:\", a, \"upper:\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#229(2)\n",
+    "\n",
+    "Sentence = input(\"Enter the sentence: \")\n",
+    "\n",
+    "def numOfsupp(str):\n",
+    "    num = 0\n",
+    "    for i in range(len(str)):\n",
+    "        if \"A\" <= str[i] <= \"Z\":\n",
+    "            num += 1\n",
+    "    return num\n",
+    "\n",
+    "def numOflow(str):\n",
+    "    num = 0\n",
+    "    for i in range(len(str)):\n",
+    "        if \"a\" <= str[i] <= \"z\":\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
