--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -322,9 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: This is What I want to say\n",
+      "upper   : 3 lower    : 17\n"
+     ]
+    }
+   ],
    "source": [
     "#229(2)\n",
     "\n",
@@ -341,7 +350,10 @@
     "    num = 0\n",
     "    for i in range(len(str)):\n",
     "        if \"a\" <= str[i] <= \"z\":\n",
-    "            "
+    "            num += 1\n",
+    "    return num\n",
+    "\n",
+    "print(\"upper   :\",numOfsupp(Sentence),    \"lower    :\", numOflow(Sentence))"
    ]
   },
   {
@@ -349,14 +361,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#230 문자열을 입력받아, 거꾸로 출력하는 프로그램. (reverse 사용 x)\n",
+    "\n",
+    "# ex) Enter the Sentence : Merry Christmas\n",
+    "# => samtsirhC yrreM\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert SentenceMerry Christmas\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input(\"insert Sentence: \")\n",
+    "\n",
+    "def rev_sen(str):\n",
+    "    return str[::-1]\n",
+    "\n",
+    "rev_sen(sentence)"
+   ]
   },
   {
    "cell_type": "code",
