--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -386,8 +386,156 @@
     "\n",
     "def rev_sen(str):\n",
     "    return str[::-1]\n",
-    "\n",
+    "-\n",
     "rev_sen(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sentence: Merry Christmas\n",
+      "BDFGJKLNOPQUVWXZ"
+     ]
+    }
+   ],
+   "source": [
+    "#231 문자열을 입력 받아, A ~ Z(혹은 a~z)중 빠진 알파벳을 대문자로 순서대로 출력하는 프로그램을 작성하시오\n",
+    "sentence = input(\"insert sentence: \")\n",
+    "for i in range(65,91):\n",
+    "    if (chr(i+32) not in sentence) and (chr(i) not in sentence):\n",
+    "        print(chr(i), end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sentence: Merry Christmas\n",
+      "BDFGJKLNOPQUVWXZ"
+     ]
+    }
+   ],
+   "source": [
+    "#231(2)\n",
+    "\n",
+    "sentence = input(\"insert sentence: \")\n",
+    "sentence = sentence.upper()\n",
+    "for i in range(65, 91):\n",
+    "    if chr(i) not in sentence:\n",
+    "        print(chr(i), end = \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#232 수(n)을 입력받아, 앞의 n개는 1부터 시작하는 홀수 오름차순, 두의 n개는 2부터 시작하는 짝수의 오름차순\n",
+    "# ex) input = 5 >> [1, 3, 5, 7, 9, 10, 8, 6, 4, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 5\n",
+      "[1, 3, 5, 7, 9, 10, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number: \"))\n",
+    "\n",
+    "num = [0] * (2 * n)\n",
+    "\n",
+    "for i in range(0, n):\n",
+    "    num[i] = i*2 + 1\n",
+    "    \n",
+    "for j in range(0, n):\n",
+    "    num[2*n-1-j] = 2 + 2 * j\n",
+    "    \n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 27]\n",
+      "[39, 100]\n",
+      "[19, 88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#233\n",
+    "#3행 2열 2차원 배열을 입력받아 가로 평균, 세로평균 전체평균을 출력하는 프로그램"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 69, 53]\n",
+      "24 71 \n",
+      "48.166666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "array = [[16, 27], [39, 100], [19, 88]]\n",
+    "for i in range(3):\n",
+    "    print(array[i])\n",
+    "\n",
+    "\n",
+    "#가로 평균\n",
+    "\n",
+    "row_avg = []\n",
+    "for i in range(3):\n",
+    "    row_avg.append(math.floor(sum(array[i])/2))\n",
+    "print(row_avg)\n",
+    "\n",
+    "# 세로 평균\n",
+    "\n",
+    "sum1 = 0\n",
+    "for i in range(2):\n",
+    "    sum2 = 0\n",
+    "    for j in range(3):\n",
+    "        sum2 += array[j][i]\n",
+    "    sum1 += sum2\n",
+    "    print(sum2 // 3, end = \" \")\n",
+    "print()\n",
+    "\n",
+    "# 전체 평균\n",
+    "print(sum1/6)"
    ]
   },
   {
