--- a/problems-review/note3.ipynb
+++ b/problems-review/note3.ipynb
@@ -600,9 +600,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sentence: Merry Christmas\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input(\"insert sentence: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BDFGJKLNOPQUVWXZ"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(65,91):\n",
+    "    if (chr(i+32) not in sentence) and (chr(i) not in sentence):\n",
+    "        print(chr(i), end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(99)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "BCDFGJKLNOPQUVWXZ\n",
+    "BDFGJKLNOPQUVWXYZ\n",
+    "\n",
+    "C가 없는대신 Y가있네?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Merry Christmas'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'z'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(90+32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 3\n",
+      "[1, 3, 5, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number: \"))\n",
+    "\n",
+    "num = [0] * (2 * n)\n",
+    "\n",
+    "for i in range(0, n):\n",
+    "    num[i] = i*2 + 1\n",
+    "    \n",
+    "for j in range(0, n):\n",
+    "    num[2*n-1-j] = 2 + 2 * j\n",
+    "    \n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'array' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-7e71d2f093c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -614,10 +762,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 27]\n",
+      "[39, 100]\n",
+      "[19, 88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "array = [[16, 27], [39, 100], [19, 88]]\n",
+    "for i in range(3):\n",
+    "    print(array[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[21, 69, 53]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#가로 평균\n",
+    "\n",
+    "row_avg = []\n",
+    "for i in range(3):\n",
+    "    row_avg.append(math.floor(sum(array[i])/2))\n",
+    "row_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 71 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 세로 평균\n",
+    "\n",
+    "sum1 = 0\n",
+    "for i in range(2):\n",
+    "    sum2 = 0\n",
+    "    for j in range(3):\n",
+    "        sum2 += array[j][i]\n",
+    "    sum1 += sum2\n",
+    "    print(sum2 // 3, end = \" \")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.166666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum1/6)"
+   ]
   },
   {
    "cell_type": "code",
@@ -628,94 +860,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert word: aaababbb\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input(\"insert word: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def isHandsome(str):\n",
+    "    for i in range(len(word)):\n",
+    "        if word[i] == word[len(word)-1-i]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "if isHandsome(word) == True:\n",
+    "    print(\"Handsome\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def isHandsome(str):\n",
+    "    for i in range(len(str)):\n",
+    "        if str[i] != str"
+   ]
   },
   {
    "cell_type": "code",
