feat: modified review 220~250

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -543,6 +543,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#234 앞으로읽거나, 거꾸로 읽으나 같은 문장은 \"Handsome 표기하도록 하시오\"\n",
+    "\n",
+    "#ex) toot => Handsome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert word: toot\n",
+      "Handsome\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input(\"insert word: \")\n",
+    "def isHandsome(str):\n",
+    "    for i in range(len(word)):3\n",
+    "        if word[i] == word[len(word)-1-i]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "if isHandsome(word) == True:\n",
+    "    print(\"Handsome\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#235\n",
+    "# 길이가 10인 1차원 배열을 만들고, 10 미만의 자연수 2개를 입력받아, 첫번째 원소와 두번째 원소를 입력받은 수로 초기화\n",
+    "# 세 번째 원소부터 마지막 원소까지는 전전항과 전항을 곱한 값의 1의 자리\n",
+    "\n",
+    "#ex) Enter the two number\n",
+    "#[3, 4, 2, 8, 6, 8, 8, 4, 2, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
