feat:modified review 220~250

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -592,6 +592,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 3\n",
+      "insert number: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 2, 8, 6, 8, 8, 4, 2, 8]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [0] * 10\n",
+    "a = int(input(\"insert number: \"))\n",
+    "b = int(input(\"insert number: \"))\n",
+    "array[0] = a\n",
+    "array[1] = b\n",
+    "for i in range(2,10):\n",
+    "    array[i] = array[i-2] * array[i-1] % 10\n",
+    "    \n",
+    "array\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
