--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -632,7 +632,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_arr(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr[i])):\n",
+    "            print(\"%2d\" %arr[i][j], end = \" \")\n",
+    "        print()\n",
+    "        \n",
+    "def mul_array(arr1, arr2):\n",
+    "    arr = [[0] * 3 for i in range(3)]\n",
+    "    for i in range(3):\n",
+    "        for j in rang"
+   ]
   }
  ],
  "metadata": {
