feat: modified review 220~250

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -644,6 +644,52 @@
     "    for i in range(3):\n",
     "        for j in rang"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#236 공백을 포함한 문자열을 입력받아, 출력예시와 함께 문자열을 나누시오\n",
+    "# Enter the sentence: My name is Hong Gildong\n",
+    "# 1. My\n",
+    "# 2. name\n",
+    "# 3. is\n",
+    "# 4. Hong\n",
+    "# 5. Gildong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: My name is Hong Gildong\n",
+      "1. My\n",
+      "2. name\n",
+      "3. is\n",
+      "4. Hong\n",
+      "5. Gildong\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input(\"Enter the sentence: \").split(\" \")\n",
+    "for i in range(len(sentence)):\n",
+    "    print(\"{}. {}\".format(1+i, sentence[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -662,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
