--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -651,7 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#236 공백을 포함한 문자열을 입력받아, 출력예시와 함께 문자열을 나누시오\n",
+    "#237 공백을 포함한 문자열을 입력받아, 출력예시와 함께 문자열을 나누시오\n",
     "# Enter the sentence: My name is Hong Gildong\n",
     "# 1. My\n",
     "# 2. name\n",
@@ -682,6 +682,52 @@
     "sentence = input(\"Enter the sentence: \").split(\" \")\n",
     "for i in range(len(sentence)):\n",
     "    print(\"{}. {}\".format(1+i, sentence[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숙제한 사람: 2 6 4 16 19 11 5\n",
+      "숙제 안한사람: [1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 238\n",
+    "\n",
+    "#학급에서 20명이 있고, 출석번호가 1~20번 까지 있다. 다음과 같은 숙제를 내지 않은 학생들을 골라내시오\n",
+    "# 숙제를 제출한 출석 번호: 2 6 4 16 19 11 5\n",
+    "# 1 3 7 8 9 10 12 13 14 15 17 18 20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숙제한 사람: 2 6 4 16 19 11 5\n",
+      "숙제 안한사람: [1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "did_hw = input(\"숙제한 사람: \").split(\" \")\n",
+    "a = []\n",
+    "for i in range(1, 21):\n",
+    "    if str(i) not in did_hw:\n",
+    "        a.append(str(i))\n",
+    "a = list(map(int,a))\n",
+    "print(\"숙제 안한사람: {}\".format(a))"
    ]
   },
   {
