feat: modifeid review 220~250

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -736,6 +736,78 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]] "
+     ]
+    }
+   ],
+   "source": [
+    "cryplist = [[0] * 27 for i in range(2)]\n",
+    "print(cryplist, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cryplist[0] = [\"a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, z, y, z\", \" \"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cryplist[1] = [\"k, i, y, d, h, n, s, z, m, a, r, q, g, x, c, u, j, b, t, v, o, e, l, p, f, w, *\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['k, i, y, d, h, n, s, z, m, a, r, q, g, x, c, u, j, b, t, v, o, e, l, p, f, w, *']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ChangetoSecret(str):\n",
+    "    a_list = [0] * len(str)\n",
+    "    for i in range(len(str)):\n",
+    "        for j in range(27):\n",
+    "            if str[i] == cryplist[0][j]:\n",
+    "                list[i] = cryplist[0][j]:\n",
+    "                    a_list[i] = cryplist[1][j]\n",
+    "                    break\n",
+    "                elif str[i] == cryplist[0][j].upper():\n",
+    "                    list[i] = cryplist[1][j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
