--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -735,7 +735,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#239 문제집 참조;"
+   ]
   },
   {
    "cell_type": "code",
@@ -801,6 +803,71 @@
     "                elif str[i] == cryplist[0][j].upper():\n",
     "                    list[i] = cryplist[1][j]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert numbers: 1 5 4 6 8 1 3 9 4 10 6 9 8 1 3 7 9 8 1 6 2 1 6 4\n",
+      "1의 개수: \n",
+      "2의 개수: \n",
+      "3의 개수: \n",
+      "4의 개수: \n",
+      "5의 개수: \n",
+      "6의 개수: \n",
+      "7의 개수: \n",
+      "8의 개수: \n",
+      "9의 개수: \n",
+      "10의 개수: \n"
+     ]
+    }
+   ],
+   "source": [
+    "#240 임의의 숫자가 주어졌을때, 각 숫자들의 개수를 counting 하시오 (크> <)\n",
+    "\n",
+    "numbers = input(\"insert numbers: \").split(\" \")\n",
+    "numbers = list(map(int, numbers))\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    b = 0\n",
+    "    for j in numbers:\n",
+    "        if j == i:\n",
+    "            b += 1\n",
+    "    print(\"number of {} is {}.\".format(i, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
