--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -814,16 +814,16 @@
      "output_type": "stream",
      "text": [
       "insert numbers: 1 5 4 6 8 1 3 9 4 10 6 9 8 1 3 7 9 8 1 6 2 1 6 4\n",
-      "1의 개수: \n",
-      "2의 개수: \n",
-      "3의 개수: \n",
-      "4의 개수: \n",
-      "5의 개수: \n",
-      "6의 개수: \n",
-      "7의 개수: \n",
-      "8의 개수: \n",
-      "9의 개수: \n",
-      "10의 개수: \n"
+      "number of 1 is 5.\n",
+      "number of 2 is 1.\n",
+      "number of 3 is 2.\n",
+      "number of 4 is 3.\n",
+      "number of 5 is 1.\n",
+      "number of 6 is 4.\n",
+      "number of 7 is 1.\n",
+      "number of 8 is 3.\n",
+      "number of 9 is 3.\n",
+      "number of 10 is 1.\n"
      ]
     }
    ],
@@ -843,23 +843,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert first word: abcd\n",
+      "insert second word: cadb\n"
+     ]
+    }
+   ],
+   "source": [
+    "#241 두 단어를 입력받아 그 구성이 다르면 not same, 같으면 same을 출력하시오\n",
+    "# abcd, cadb는 구성이 같다.\n",
+    "# abef, beac는 구성이 다르다\n",
+    "\n",
+    "a = input(\"insert first word: \").split(\"\")\n",
+    "b = input(\"insert second word: \").split(\"\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-4b975d12b537>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"same\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"not same\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'sort'"
+     ]
+    }
+   ],
+   "source": [
+    "if a.sort == b.sort:\n",
+    "    print(\"same\")\n",
+    "else:\n",
+    "    print(\"not same\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-2ed0d7de6146>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'sort'"
+     ]
+    }
+   ],
    "source": []
   },
   {
